<resources>
    <string name="app_name">iTunes Connect</string>
    <string name="search_artist">Search Artist...</string>
    <string name="dummy_track_name">Nashe Si Chadh Gayi</string>
    <string name="artists">Artists:</string>
    <string name="album">Album:</string>
    <string name="dummy_artist_name"><![CDATA[Vishal-Shekhar & Arijit Singh]]></string>
    <string name="dummy_album_name">Befikre (Original Motion Picture Soundtrack)</string>
    <string name="dummy_release_date">2016-10-18T07:00:00Z</string>
    <string name="release">Release:</string>
    <string name="genre">Genre:</string>
    <string name="dummy_genre_name">Bollywood</string>
    <string name="play_demo">Play Demo</string>
    <string name="not_searched_yet">Not Searched Yet</string>
    <string name="country">Country:</string>
    <string name="dummy_country_name">IND</string>
</resources>