<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_Track"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/itunedummyimage"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dummy_track_name"
        android:textColor="#2196F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Track" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/artists"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_ArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_artist_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/album"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_CollectionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_album_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/release"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_GenreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_release_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_ReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_genre_name" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Play"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/play_demo"
        app:icon="@drawable/ic_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:fabSize="normal"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>